Changelog
=========

1.1-dev0 - (unreleased)
---------------------------

1.0 - (2023-05-15)
-----------------------

* Initial release.
  [eea]