@@ -1,3 +1,4 @@
 # -*- coding: utf-8 -*-
-""" Init """
-__import__('pkg_resources').declare_namespace(__name__)
+"""Init"""
+
+__import__("pkg_resources").declare_namespace(__name__)
