@@ -1,2 +1,1 @@
-""" i18n
-"""
+"""i18n"""
