@@ -1,5 +1,5 @@
-""" Base test cases
-"""
+"""Base test cases"""
+
 from Products.CMFPlone import setuphandlers
 from plone.testing import z2
 from plone.app.testing import TEST_USER_ID
@@ -10,35 +10,34 @@ from plone.app.testing import setRoles
 
 
 class EEAFixture(PloneSandboxLayer):
-    """ EEA Testing Policy
-    """
+    """EEA Testing Policy"""
+
     def setUpZope(self, app, configurationContext):
-        """ Setup Zope
-        """
+        """Setup Zope"""
         import eea.fise.policy
+
         self.loadZCML(package=eea.fise.policy)
 
-        z2.installProduct(app, 'eea.kitkat')
-        z2.installProduct(app, 'eea.dexterity.indicators')
-        z2.installProduct(app, 'eea.dexterity.themes')
-        z2.installProduct(app, 'eea.progress.workflow')
-        z2.installProduct(app, 'eea.fise.policy')
+        z2.installProduct(app, "eea.kitkat")
+        z2.installProduct(app, "eea.dexterity.indicators")
+        z2.installProduct(app, "eea.dexterity.themes")
+        z2.installProduct(app, "eea.progress.workflow")
+        z2.installProduct(app, "eea.fise.policy")
 
     def setUpPloneSite(self, portal):
-        """ Setup Plone
-        """
-        applyProfile(portal, 'eea.fise.policy:default')
+        """Setup Plone"""
+        applyProfile(portal, "eea.fise.policy:default")
 
         # Default workflow
-        wftool = portal['portal_workflow']
-        wftool.setDefaultChain('simple_publication_workflow')
+        wftool = portal["portal_workflow"]
+        wftool.setDefaultChain("simple_publication_workflow")
 
         # Login as manager
-        setRoles(portal, TEST_USER_ID, ['Manager'])
+        setRoles(portal, TEST_USER_ID, ["Manager"])
 
         # Add default Plone content
         try:
-            applyProfile(portal, 'plone.app.contenttypes:plone-content')
+            applyProfile(portal, "plone.app.contenttypes:plone-content")
         except KeyError:
             # BBB Plone 4
             setuphandlers.setupPortalContent(portal)
@@ -46,16 +45,14 @@ class EEAFixture(PloneSandboxLayer):
         # Create testing environment
         portal.invokeFactory("Folder", "sandbox", title="Sandbox")
 
-
     def tearDownZope(self, app):
-        """ Uninstall Zope
-        """
-        z2.uninstallProduct(app, 'eea.kitkat')
-        z2.uninstallProduct(app, 'eea.dexterity.indicators')
-        z2.uninstallProduct(app, 'eea.dexterity.themes')
-        z2.uninstallProduct(app, 'eea.progress.workflow')
-        z2.uninstallProduct(app, 'eea.fise.policy')
+        """Uninstall Zope"""
+        z2.uninstallProduct(app, "eea.kitkat")
+        z2.uninstallProduct(app, "eea.dexterity.indicators")
+        z2.uninstallProduct(app, "eea.dexterity.themes")
+        z2.uninstallProduct(app, "eea.progress.workflow")
+        z2.uninstallProduct(app, "eea.fise.policy")
+
 
 EEAFIXTURE = EEAFixture()
-FUNCTIONAL_TESTING = FunctionalTesting(bases=(EEAFIXTURE,),
-                                       name='EEApolicy:Functional')
+FUNCTIONAL_TESTING = FunctionalTesting(bases=(EEAFIXTURE,), name="EEApolicy:Functional")
