@@ -1,2 +1,1 @@
-""" Upgrades
-"""
+"""Upgrades"""
