@@ -65,34 +65,9 @@ skip_install = true
 
 deps =
     isort
-    flake8
-    # helper to generate HTML reports:
-    flake8-html
-    # Useful flake8 plugins that are Python and Plone specific:
-    flake8-coding
-    flake8-debugger
-    flake8-deprecated
-    flake8-print
-    #flake8-pytest
-    flake8-todo
-    flake8-isort
     mccabe
-    # Potential flake8 plugins that should be used:  # TBD
-    #flake8-blind-except
-    #flake8-commas
-    #flake8-docstrings
-    #flake8-mypy
-    #flake8-pep3101
-    #flake8-plone-hasattr
-    #flake8-string-format
-    #flake8_strict
-    #flake8-quotes
-    #flake8-polyfill
 
 commands =
-    mkdir -p {toxinidir}/reports/flake8
-    - flake8 --format=html --htmldir={toxinidir}/reports/flake8 --doctests src setup.py
-    flake8 --doctests src tests setup.py
     isort --check-only --recursive {toxinidir}/src
 
 whitelist_externals =
