@@ -3,6 +3,10 @@ Changelog
 
 1.1-dev0 - (unreleased)
 ---------------------------
+* Change: Replace Python linting to ruff
+  [mihaidobrescu1111 = refs #286821]
+* Change: Add plone6 tests
+  [mihaidobrescu1111 = refs #293593]
 
 1.0 - (2023-05-15)
 -----------------------
